--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<p class="errorMessage">{{ errorMessage }}</p>
-<pre>{{ proposalTable }}</pre>
-<pre>{{ bibliography }}</pre>
+<!--<p class="errorMessage">{{ errorMessage }}</p>-->
+<pre>{{ gitHubUsers }}</pre>
+<pre>{{ gitHubOrganizations }}</pre>
