Unit 2: styled table

--- a/src/app/git-hub-organizations-table/git-hub-organizations-table.component.html
+++ b/src/app/git-hub-organizations-table/git-hub-organizations-table.component.html
@@ -1,6 +1,13 @@
 <div>
-    <table>
-        <thead></thead>
+    <table class="organizations-table">
+        <thead>
+        <tr>
+            <th>ID</th>
+            <th>Login</th>
+            <th>URL</th>
+            <th>Description</th>
+        </tr>
+        </thead>
         <tbody>
             <tr *ngFor="let organization of organizations">
                 <td> {{ organization.id }} </td>
