--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,1 @@
-/* You can add global styles to this file, and also import other style files */
+body { font-family: Verdana, Helvetica, sans-serif; font-size: 14px }
