--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,1 @@
-body { font-family: Verdana, Helvetica, sans-serif; font-size: 14px }
+body { font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif; font-size: 14px }
