--- a/src/app/git-hub-organizations-table/git-hub-organizations-table.component.css
+++ b/src/app/git-hub-organizations-table/git-hub-organizations-table.component.css
@@ -6,7 +6,7 @@
 }
 
 .organizations-table thead tr {
-    background-color: #009879;
+    background-color: #004f87;
     color: #ffffff;
     text-align: left;
 }
@@ -25,10 +25,10 @@
 }
 
 .organizations-table tbody tr:last-of-type {
-    border-bottom: 2px solid #009879;
+    border-bottom: 2px solid #004f87;
 }
 
-.organizations-table tbody tr.active-row {
+.organizations-table tbody tr.description-row {
     font-weight: bold;
-    color: #009879;
+    color: #004f87;
 }
