--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<pre>{{ gitHubOrganizations }}</pre>
+<app-git-hub-organizations-table [organizations]="gitHubOrganizations"></app-git-hub-organizations-table>
+
+<!-- the value of gitHubOrganizations is assigned to the child variable "organizations" 
+    in the "app-git-hub-organizations-table" component-->
